# fast_gpt2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  build.rs  test.py
.github/workflows/: rust.yml
benches/: softmax.py  softmax.rs
docker/: Dockerfile
examples/: download.rs  run.rs
src/: download.rs  lib.rs  main.rs  model.rs  ops.rs  tensor.rs  tokenizer.rs
src/model/: dfdx.rs  mod.rs  raw.rs  smelt.rs
